defined route to get employees and updated function to buil a query based on user
