# src/routes/employeeRoutes.js
@@ -6,5 +6,6 @@ const { authenticationRequired } = require('../middlewares/authMiddlewares')
 const { verifyPermission } = require('../middlewares/permissionsMiddleware')
 
 router.post('/', authenticationRequired, verifyPermission(["isAdmin"]), controller.createEmployee)
+router.get('/', authenticationRequired, verifyPermission(["isAdmin"]), controller.getEmployees)
 
 module.exports = router
